<resources>
    <string name="app_name">ChartSample</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">User</string>
    <string name="title_search">Search</string>

    <string name="under_30">Under 30</string>

    <string name="salary1">k 20-k 30</string>
    <string name="salary2">k 30-k 40</string>
    <string name="gender1">Male</string>
    <string name="gender2">Female</string>

    <string-array name="age_group">
        <item>@string/under_30</item>
    </string-array>

    <string-array name="salary">
        <item>@string/salary1</item>
        <item>@string/salary2</item>
    </string-array>

    <string-array name="gender">
        <item>@string/gender1</item>
        <item>@string/gender2</item>
    </string-array>
</resources>